--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -90,6 +90,8 @@ https://github.com/dece1ver/Sunduk
             "Добавил в базу знаний описание пользовательских циклов на Victor."}));
         Info.Add(new ChangelogInfo(new Version(1, 0, 4), new DateTime(2022, 9, 06), new string[] {
             "Расчет времени токарной обработки."}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 4, 3), new DateTime(2022, 9, 06), new string[] {
+            "Улучшил примеры проточки под резьбу."}));
         Info.Reverse();
     }
 
